log
Thu, Mar 20, 2025  1:38:00 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  1:56:44 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:88:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux ;
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
64b35d8
Thu, Mar 20, 2025  3:37:25 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:99:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux ;
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f8aee2
Thu, Mar 20, 2025  3:37:45 PM: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 0/70
4b24660
Thu, Mar 20, 2025  5:33:57 PM: 
 tests:  0|5
total_score: 0/70
ed8306e
Thu, Mar 20, 2025  5:37:18 PM: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int dato = first(L) ;
               ^~~~~
exercises.c:88:15: error: comparison between pointer and integer [-Werror]
    while(dato != NULL) {
               ^~
exercises.c:91:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
          dato = first(L) ;
               ^
exercises.c:93:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else dato = next(L) ;
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
da2e7e5
Thu, Mar 20, 2025  5:40:18 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int dato = (int*)first(L) ;
               ^
exercises.c:88:15: error: comparison between pointer and integer [-Werror]
    while(dato != NULL) {
               ^~
exercises.c:91:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
          dato = (int*)first(L) ;
               ^
exercises.c:93:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else dato = (int*)next(L) ;
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
47d7bcb
Thu, Mar 20, 2025  5:42:30 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
875bd34
Thu, Mar 20, 2025  5:43:24 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
a073ce1
Thu, Mar 20, 2025  5:50:48 PM: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  2|3
total_score: 30/70
212d94f
